<resources>
    <string name="app_name" translatable="false">Intent Filter</string>
    <string name="xposed_description">Intercept jumps between applications where dataString is not empty</string>
    <string name="time">Time</string>
    <string name="callingPackage" translatable="false">callingPackage</string>
    <string name="uid" translatable="false">Uid</string>
    <string name="dataString" translatable="false">DataString</string>
    <string name="action" translatable="false">Action</string>
    <string name="type" translatable="false">Type</string>
    <string name="ActivityList" translatable="false">ActivityList</string>
    <string name="actionContain">Action contains</string>
    <string name="typeContain">Type contains</string>
    <string name="dataStringContain">DataString contains</string>
    <string name="activityKeywords">Activity keywords</string>
    <string name="log">Log</string>
    <string name="rule">Rule</string>
    <string name="about">About</string>
    <string name="view">Check</string>
    <string name="tip_log">The vast majority of PackageManagerService.queryIntentActivitiesInternal records, App open to record</string>
    <string name="tip_rule">Split with &lt;font color=\'#FF8A80\'>%s&lt;/font>, leave blank means don\'t match</string>
    <string name="clearLog">Clear log</string>
    <string name="noEmpty">Fill in at least one</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="add">Add</string>
    <string name="blocked" translatable="false">Intent Filter: blocked</string>
    <string name="batteryTip">Please set to ignore battery optimization</string>
    <string name="black">Black</string>
    <string name="white">White</string>
</resources>