<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/item_normal"
    android:orientation="vertical"
    android:padding="15dp">

    <ToggleButton
        android:id="@+id/tbAction"
        style="@style/RuleToggleButton"
        app:layout_constraintBottom_toBottomOf="@id/etAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/etAction" />

    <EditText
        android:id="@+id/etAction"
        style="@style/RuleEditText"
        android:hint="@string/actionContain"
        app:layout_constraintEnd_toStartOf="@id/tbAction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/tbType"
        style="@style/RuleToggleButton"
        app:layout_constraintBottom_toBottomOf="@id/etType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/etType" />

    <EditText
        android:id="@+id/etType"
        style="@style/RuleEditText"
        android:hint="@string/typeContain"
        app:layout_constraintEnd_toStartOf="@id/tbType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAction" />

    <ToggleButton
        android:id="@+id/tbDataString"
        style="@style/RuleToggleButton"
        app:layout_constraintBottom_toBottomOf="@id/etDataString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/etDataString" />

    <EditText
        android:id="@+id/etDataString"
        style="@style/RuleEditText"
        android:hint="@string/dataStringContain"
        app:layout_constraintEnd_toStartOf="@id/tbDataString"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etType" />

    <ToggleButton
        android:id="@+id/tbActivity"
        style="@style/RuleToggleButton"
        app:layout_constraintBottom_toBottomOf="@id/etActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/etActivity" />

    <EditText
        android:id="@+id/etActivity"
        style="@style/RuleEditText"
        android:hint="@string/activityKeywords"
        app:layout_constraintEnd_toStartOf="@id/tbActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDataString" />

    <ToggleButton
        android:id="@+id/tbUid"
        style="@style/RuleToggleButton"
        app:layout_constraintEnd_toStartOf="@id/ibDelete"
        app:layout_constraintTop_toBottomOf="@id/etActivity" />

    <EditText
        android:id="@+id/etUid"
        style="@style/RuleEditText"
        android:hint="@string/uid"
        app:layout_constraintEnd_toStartOf="@id/tbUid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etActivity" />

    <ImageButton
        android:id="@+id/ibDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintBottom_toBottomOf="@id/etUid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/etUid" />
</androidx.constraintlayout.widget.ConstraintLayout>