<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/item_normal"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/tvTitleTime"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTime"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvTitleTime"
        app:layout_constraintTop_toBottomOf="@id/tvTitleTime"
        tools:text="@tools:sample/date/hhmmss" />

    <TextView
        android:id="@+id/tvTitleUid"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUid"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tvTitleUid"
        app:layout_constraintTop_toBottomOf="@id/tvTitleUid"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/tvTitleAction"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTime" />

    <TextView
        android:id="@+id/tvAction"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        app:layout_constraintStart_toStartOf="@id/tvTitleAction"
        app:layout_constraintTop_toBottomOf="@id/tvTitleAction"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/tvTitleType"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAction" />

    <TextView
        android:id="@+id/tvType"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        app:layout_constraintStart_toStartOf="@id/tvTitleType"
        app:layout_constraintTop_toBottomOf="@id/tvTitleType"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/tvTitleDataString"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dataString"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvType" />

    <TextView
        android:id="@+id/tvDataString"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        app:layout_constraintStart_toStartOf="@id/tvTitleDataString"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDataString"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/tvTitleActivityList"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ActivityList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDataString" />

    <TextView
        android:id="@+id/tvActivities"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        app:layout_constraintStart_toStartOf="@id/tvTitleActivityList"
        app:layout_constraintTop_toBottomOf="@id/tvTitleActivityList"
        tools:text="@tools:sample/full_names" />
</androidx.constraintlayout.widget.ConstraintLayout>